objects/Market__c.object
<CustomObject>
    <label>Market</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Market Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>Zone__c</referenceTo>
        <relationshipLabel>Markets</relationshipLabel>
        <relationshipName>Markets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <label>External Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Name__c</fullName>
        <label>Market Name</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Number__c</fullName>
        <label>Market Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_Manager__c</fullName>
        <label>Market Manager</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Description__c</fullName>
        <label>Market Description</label>
        <type>TextArea</type>
    </fields>
</CustomObject>